sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:8: error: '(' expected but identifier found.
      if plusPetit(i+1:Int,i:Int){
         ^AlgCocktailSort1:12: error: illegal start of simple expression
    }
    ^AlgCocktailSort1:14: error: '(' expected but identifier found.
      if plusPetit(i+1:Int,i:Int){
         ^AlgCocktailSort1:18: error: illegal start of simple expression
    }
    ^